--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-dom": "19.0.0",
     "rimraf": "6.0.1",
     "typescript": "5.8.2",
-    "typescript-eslint": "8.29.0"
+    "typescript-eslint": "8.29.0",
+    "vite": "6.2.4"
   },
   "publishConfig": {
     "access": "public",
