build: update dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,14 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    ignore:
+      - dependency-name: "@types/node"
+        versions: [">=24.0.0"]
     groups:
+      eslint:
+        patterns:
+          - "eslint"
+          - "@eslintjs/*"
       typescript-eslint:
         patterns:
           - "@typescript-eslint/*"
